test/corpus/snippet.txt
================================================================================
basic
================================================================================
do |${1:i}|
  $0
en\\\\d
--------------------------------------------------------------------------------

(source
  (text
    (text_content))
  (placeholder
    (int)
    (text
      (text_content)))
  (text
    (text_content))
  (tabstop
    (int))
  (text
    (text_content)
    (escape_sequence)
    (escape_sequence)
    (text_content)))

================================================================================
regex
================================================================================
${1/(\\w+)/.${1:/downcase}/g}
--------------------------------------------------------------------------------

(source
  (tabstop
    (int)
    (transform
      (regex_pattern)
      (text
        (text_content))
      (format
        (int))
      (regex_flags))))

================================================================================
regex2
================================================================================
$1 ${1/(.*)/${1:/downcase}/}
--------------------------------------------------------------------------------

(source
  (tabstop
    (int))
  (text
    (text_content))
  (tabstop
    (int)
    (transform
      (regex_pattern)
      (format
        (int)))))

================================================================================
format
================================================================================
$1 ${1/(?:(wat)|^.*?$)/${1:?WA\:T:nah}/}
more
$1 ${1/(?:(wat)|^.*?$)/${1:+WA:T:nah}/}
--------------------------------------------------------------------------------

(source
  (tabstop
    (int))
  (text
    (text_content))
  (tabstop
    (int)
    (transform
      (regex_pattern)
      (format
        (int)
        if: (text
          (text_content)
          (escape_sequence)
          (text_content))
        else: (text
          (text_content)))))
  (text
    (text_content))
  (tabstop
    (int))
  (text
    (text_content))
  (tabstop
    (int)
    (transform
      (regex_pattern)
      (format
        (int)
        if: (text
          (text_content))))))

================================================================================
nested placeholder
================================================================================
${1:another ${2:placeholder}}
--------------------------------------------------------------------------------

(source
  (placeholder
    (int)
    (text
      (text_content))
    (placeholder
      (int)
      (text
        (text_content)))))

================================================================================
complicated
================================================================================
#define ${TM_FILEPATH/(^\/.*\/src\/)|([^a-zA-Z0-9])|([a-zA-Z0-9])/${2:+_}${3:/upcase}/g}_
--------------------------------------------------------------------------------

(source
  (text
    (text_content))
  (variable
    (identifier)
    (transform
      (regex_pattern)
      (format
        (int)
        if: (text
          (text_content)))
      (format
        (int))
      (regex_flags)))
  (text
    (text_content)))
